precio en insertar c}venta

--- a/Views/Billing/NewSalesInvoices.cshtml
+++ b/Views/Billing/NewSalesInvoices.cshtml
@@ -230,7 +230,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="Price">Precio</label>
-                                    <input class="form-control" id="Price" readonly />
+                                    <input class="form-control" id="Price"  />
                                 </div>
                             </div>
                             <div class="col-md-6">
