--- a/Views/Billing/EditSalesInvoices.cshtml
+++ b/Views/Billing/EditSalesInvoices.cshtml
@@ -149,8 +149,8 @@
                                 <td class="col-name">@item.ItemCode</td>
                                 <td class="col-name">@item.ItemName</td>
                                 <td class="col-name">@item.Quantity</td>
-                                <td class="col-name">@item.UnitPrice</td>
-                                <td class="col-name">@item.LineTotal</td>
+                                <td class="col-name">@Math.Round(item.UnitPrice, 2)</td>
+                                <td class="col-name">@Math.Round(item.LineTotal, 2)</td>
                             </tr>
                         }
                     </tbody>
@@ -158,12 +158,12 @@
                         <tr>
                             <td colspan="4"></td>
                             <td>Subtotal</td>
-                            <td id="tdSubtotal" width="150px" style="text-align:left;">@ViewBag.Sale.SubTotal</td>
+                            <td id="tdSubtotal" width="150px" style="text-align:left;">@Math.Round(ViewBag.Sale.SubTotal, 2)</td>
                         </tr>
                         <tr>
                             <td colspan="4"></td>
                             <td style=""><b>IVA</b></td>
-                            <td id="IVA" style="text-align:left;">@ViewBag.Sale.IVA</td>
+                            <td id="IVA" style="text-align:left;">@Math.Round(ViewBag.Sale.IVA, 2)</td>
                         </tr>
                         <tr>
                             <td colspan="4"></td>
@@ -173,7 +173,7 @@
                         <tr style="font-weight: bold;">
                             <td colspan="4"></td>
                             <td>Total</td>
-                            <td id="Total" style="text-align:left;">@ViewBag.Sale.DocTotal</td>
+                            <td id="Total" style="text-align:left;">@Math.Round(ViewBag.Sale.DocTotal, 2)</td>
                         </tr>
                     </tfoot>
                 </table>
