--- a/Views/Inventory/AdminItems.cshtml
+++ b/Views/Inventory/AdminItems.cshtml
@@ -165,6 +165,7 @@
                                     <option value="">Selecione..</option>
                                     <option value="AC">Acrilico</option>
                                     <option value="ES">Esmalte</option>
+                                    <option value="PV">Producto Venta</option>
                                 </select>
                             </div>
                         </div>
@@ -234,7 +235,7 @@
                                     <option value="">Selecione..</option>
                                     <option value="1">Almacen 1</option>
                                     <option value="2">Almacen 2</option>
-                                    <option value="3">Almacen 3</option>
+                                    <option value="3">Producto Terminado</option>
                                 </select>
                             </div>
                         </div>
