--- a/Views/Billing/EditSalesInvoices.cshtml
+++ b/Views/Billing/EditSalesInvoices.cshtml
@@ -168,7 +168,7 @@
                         <tr>
                             <td colspan="4"></td>
                             <td>Percepción</td>
-                            <td id="Percepcion" style="text-align:left;">@ViewBag.Sale.Perception</td>
+                            <td id="Percepcion" style="text-align:left;">@Math.Round(ViewBag.Sale.Perception, 2)</td>
                         </tr>
                         <tr style="font-weight: bold;">
                             <td colspan="4"></td>
