--- a/Views/PayRoll/PayRolls.cshtml
+++ b/Views/PayRoll/PayRolls.cshtml
@@ -17,7 +17,7 @@
             <a class="actionLinkBreadcrumb" href="/Home/Index">Planilla</a>
         </li>
         <li class="breadcrumb-item">
-            <a class="actionLinkBreadcrumb" href="/Employes/Index">Planillas</a>
+            <a class="actionLinkBreadcrumb" href="/PayRoll/PayRolls">Planillas</a>
         </li>
         <li class="breadcrumb-item active">Index</li>
     </ol>
@@ -39,7 +39,7 @@
         <div class="d-flex justify-content-end">
             <div class="col-md-2">
                 <button class="btn btn-warning" disabled id="btnChangeDate" >
-                    <i class="fas fa-print"></i>
+                    <i class="fas fa-edit"></i>
                     Modificar 
                 </button>
             </div>
