--- a/Views/Billing/EditSalesInvoices.cshtml
+++ b/Views/Billing/EditSalesInvoices.cshtml
@@ -40,7 +40,7 @@
 
         <br />
         <div class="row">
-            <div class="col-md-4" hidden>
+            <div class="col-md-3" hidden>
                 <div class="inputs" id="OldCustomer">
                     <div class="form-group form-md-line-input" id="form_control_1">
                         <label for="cliente">Cliente</label>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <div class="inputs" id="OldCustomer">
                     <div class="form-group form-md-line-input" id="form_control_1">
                         <label for="cliente">Cliente</label>
@@ -56,12 +56,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <label for="NumAtCard">Correlativo de Factura</label>
                 <input type="text" class="form-control" id="NumAtCard" value="@ViewBag.Sale.NumAtCard" disabled/>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <div class="form-group form-md-line-input" id="form_control_1">
                     <label for="cliente">Orden</label>
                     <select class=" form-control" name="IdComentsOrder" id="IdComentsOrder" disabled style="width: 100%; height:38px;">
@@ -82,10 +82,26 @@
                 <label for="DateIn">Fecha</label>
                 <input type="text" class="form-control" id="DocDate" value="@ViewBag.Sale.DocDate.ToString("dd/MM/yyyy")" disabled />
             </div>
-            <div class="col-md-4" hidden>
+            <div class="col-md-2" >
                 <div class="form-group">
                     <label for="SalesType">Tipo de Venta</label>
-                    <input type="text" class="form-control" id="SalesType" value="F" />
+                    <select class="form-control" name="SalesType" id="SalesType"  style="width: 100%; height:38px;" onchange="UpdateSaleInfo()">
+                        <option value="" >Seleccione</option>
+                        @if (ViewBag.Sale.SalesType == "C")
+                        {
+                        <option value="C" selected>Consumidor Final</option>
+                        }
+                        else {
+                        <option value="C">Consumidor Final</option>
+                        }
+                        @if (ViewBag.Sale.SalesType == "F")
+                        {
+                            <option value="F" selected>Crédito Fiscal</option>
+                        }
+                        else {
+                            <option value="F">Crédito Fiscal</option>
+                        }
+                    </select>
                 </div>
             </div>
 
@@ -93,7 +109,7 @@
         <br />
         <hr />
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 d-flex justify-content-center">
                 <button class="btn btn-outline-success" onclick="newItem()">
                     <i class="fas fa-plus"></i>
                     Nuevo Item
